//Answer.proto

package oepski;
syntax = "proto3";

enum TurnShape {
  unspecified = 0;
  cShape = 1;
  sShape = 2;
  jShape = 3;
  zShape = 4;
}

message AnswerMessage {
  
  string comments = 1;
  TurnShape turnShape = 2;
  string comments2 = 3;
}